
plugins {
    id 'application'
}

sourceCompatibility = 11
targetCompatibility = 17

//java {
//  toolchain {
//    languageVersion = JavaLanguageVersion.of(21)
//  }
//}

// tag::repositories[]
repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://jitpack.io'
    }
}
// end::repositories[]


// tag::dependencies[]
dependencies {
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'

    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.5', classifier: 'all', {
        exclude group: 'commons-io', module: 'commons-io'
        exclude group: 'org.apache.commons', module: 'commons-lang3'
        exclude group: 'ch.qos.logback', module: 'logback-classic'
        exclude group: 'ch.qos.logback', module: 'logback-core'
  }
}
// end::dependencies[]

task fortifyScan(type: JavaExec)  {
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}
